# DataRec

./: .gitignore  README.md  main_gui.py  mft_detektor.pt  mft_detektor.pth
ai-logic/: ai-test.py
ai_logic/: ai-test.py  ai_refinement.py  classifier.py  heatmap_gen.py  mft_detektor.pt  mft_detektor.pth  neural_analyzer.py  reconstructor.py
core-scanner/: Cargo.toml  mft_detektor.pt  mft_detektor.pth
core-scanner/src/: entropy.rs  main.rs  recovery.rs
